test/visibility/private/argumentBad.good
argumentBad.chpl:1: error: syntax error near 'private'
